# rustbb

./: .env.example  Cargo.toml  README.md  docker-compose.yml  input.css  tailwind.config.js
migrations/: 20230317201016_init.sql
migrations/definitions/: _initial.json
public/: sun_editor.js
schemas/: category.surql  forum.surql  main_forum.surql  permission.surql  post.surql  thread.surql  user.surql  user_group.surql
src/: app.rs  auth.rs  database.rs  db.rs  error.rs  error_template.rs  fallback.rs  global.rs  hooks.rs  lib.rs  main.rs  permission_entries.rs
src/components/: button.rs  card.rs  footer.rs  form.rs  header.rs  input.rs  link.rs  login_form.rs  mod.rs  nav.rs  register_form.rs  sidebar.rs  text_editor.rs
src/model/: category.rs  forum.rs  main_forum.rs  mod.rs  permission.rs  thread.rs  user.rs  user_group.rs  user_group_on_permission.rs
src/pages/: create_thread.rs  forum.rs  forum_temp.rs  home.rs  login.rs  mod.rs  register.rs
style/: output.css
