[package]
name = "rustbb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
leptos = { path="../leptos/leptos", default-features = false, features = [
  "serde",
] }
leptos_axum = { path = "../leptos/integrations/axum", optional = true }
leptos_meta = { path = "../leptos/meta", default-features = false }
leptos_router = { path = "../leptos/router", default-features = false }
log = "0.4"
chrono = {version = "0.4.23", features = ["serde"]}
cfg-if = "1.0"
serde = "1.0.152"
serde_json = "1.0.93"
surrealdb = "1.0.0-beta.9"
strum = "0.24.1"
wildmatch =  "2.1.1"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.84" }
console_log = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3.61", optional = true }
strum_macros = "0.24.3"
http = "0.2.9"
cookie = "0.17.0"
thiserror = "1.0.40"
itertools = "0.10.5"

# dependecies for server (enable when ssr set)
axum = { version = "0.6.1", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.3.4", features = ["fs"], optional = true }
futures = { version = "0.3", optional = true }
simple_logger = { version = "4.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
tracing = { version = "0.1.37", optional = true}
tracing-subscriber = { version = "0.3.16", optional = true}
tokio = { version = "1.22.0", features = ["full"], optional = true }
rust-argon2 = { version = "1.0.0", optional = true}
jsonwebtoken = { version = "8.3.0", optional = true}
slug = { version = "0.1.4", optional = true}
lazy_static = { version = "1.4.0", optional = true}

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:console_log", "dep:console_error_panic_hook", "dep:web-sys"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:axum", "dep:tower", "dep:slug", "dep:lazy_static", "dep:tower-http", "dep:futures", "dep:simple_logger", "dep:dotenv", "dep:tracing", "dep:tracing-subscriber", "dep:rust-argon2", "dep:jsonwebtoken", "dep:leptos_axum", "dep:tokio"]

[package.metadata.cargo-all-features]
denylist = [
  "console_error_panic_hook",
  "console_log",
  "futures",
  "simple_logger",
  "wasm-bindgen",
  "rbatis",
  "rbs",
  "rbdc-pg",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
output-name = "rustbb"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg	
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
